name:               kenken
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10

executable kenken-exe
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base
   , base-prelude
   , containers
   , microlens-platform
   , split
   , transformers
   , vector
